# papp

./: CMakeLists.txt  balici.cpp  dlazdici.cpp  generator_pismenok.cpp  grafici.cpp  lovci_a_zberaci.cpp  main.cpp  maliari.cpp  murari_2013.cpp  nastenkari.cpp  oknari.cpp  pekari.cpp  robotnici.cpp  slachtici_a_poddani.cpp  sportovci.cpp  testeri_programatori.cpp  volici.cpp  zapocet.cpp
