cmake_minimum_required(VERSION 3.8)
project(papp)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14 -pthread")

add_executable(mato main.cpp)
add_executable(pekari pekari.cpp)
add_executable(maliari maliari.cpp)
add_executable(volici volici.cpp)
add_executable(balici balici.cpp)
add_executable(generator_pismenok generator_pismenok.cpp)
add_executable(slachtici_a_poddani slachtici_a_poddani.cpp)
add_executable(lovci_a_zberaci lovci_a_zberaci.cpp)
add_executable(sportovci sportovci.cpp)
add_executable(robotnici robotnici.cpp)
add_executable(oknari oknari.cpp)
add_executable(nastenkari nastenkari.cpp)
add_executable(dlazdici dlazdici.cpp)
add_executable(murari_2013 murari_2013.cpp)
add_executable(testeri_programatori testeri_programatori.cpp)
add_executable(grafici grafici.cpp)
add_executable(zapocet zapocet.cpp)
#add_executable()

